230206 저장1 후기 탭 호출 검토후 4번째 추가 기능 테스트2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
         <item> Personal </item>
         <item> Team </item>
     </string-array>
+
+    <string-array name="diaryListOnOffItem">
+        <item> All </item>
+        <item> Personal </item>
+        <item> Team </item>
+    </string-array>
 </resources>
