230208 저장7 수정창 작업중

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,33 @@
         <item> Personal </item>
         <item> Team </item>
     </string-array>
+
+    <string name="longSentence">
+        더해서 금붕어가 담긴 비닐봉투가 나오는 에피소드에서는, 금붕어가 들어있는 비닐봉투에 구멍이 뚫리자,
+        레드가 그걸 입으로 막으려 하지만, 레드의 항문으로 물이 새는 등 위기에 처하자, 옐
+        로우가 레드의 엉덩이를 입에 물고 막는다. 그러자, 이번엔 레드의 입을 통해 항문으로 나온
+        물을 옐로우가 다시 마신다. 이런 정신나간 더러운 개그가 극의 대부분을 차지하는데,
+        단순하고 짧은 시간 안에 인상깊게 보여줄 소재가 필요하기 때문이기도 하다. 오물 개그의 연장선에서,
+        애벌레 주제에 화장실이 없으면 똥을 못 싼다.
+
+        1기의 하수관에 사는 생물들 중에는 정체불명의 생물들이 많다. 하수관에 초롱아귀와 피라냐가 섞인 듯한
+        네이비란 물고기가 살질 않나, 걸어다니는 파리지옥이 있지 않나, 개구리가 살질 않나, 모래 괴물이 있지 않나,
+        외계인이나 쭈꾸미가 놀러오지 않나, 사마귀까지 오는 등 온갖 괴물들이 산다.
+        또한 타 한국의 아동용 애니메이션들과 달리, 일부 에피소드를 제외하면 주인공들의 생존 분투극을 다루기 때문에
+        도덕이나 권선징악과는 거리가 매우 먼 성향의 작품이다. 주연들 대부분이 자기 목숨이 급급할 때마다
+        서로 배신하거나 고기방패로 내세우려 들며 음식이 눈앞에 떨어지면 매번 독차지하기 위해 정신을 못 차리고 싸운다.
+
+        여담으로 등장하는 성인 남성 인간들은 전부 뚱뚱하다.
+        라바 인 뉴욕에서 특히 많은 사람들이 나오는데 아마 미국,
+        그 중에서도 뉴욕이 비만의 도시여서 그런 듯. 시즌4에서는 척이라는 정상적인 체형의 인간도 등장한다.
+
+        그런데 몇몇 에피소드는 애절한 에피소드도 있다. 일행들이 다 나이가 들어서 다들 모여
+        연주회를 가지는데 하나 둘씩 죽어가고 각자 연주하던 악기가 유품처럼 남는다던가…
+        숨바꼭질을 하다 레드가 옐로우를 못찾고 또 다들 나이가 들어 임종을 맞이하고 레드만 남았을 때
+        다시 만난다거나 옐로우가 병아리를 만나 닭이 될 때까지 키우다가 병아리를 키우기 위해 친
+        구들 음식을 훔친 것 때문에 친구들이 시위를 일으켰는데 병아리가 레드를 먹었다가 뱉어서 옐로우가 울면서
+        닭을 지상으로 쫒아낸다거나 헌데 이래놓고 전자는 시즌2의 배경이었던 집을 거쳐
+        시즌1의 하수구로 배경이 바뀌더니 모두가 고치 속에서 다시 태어나서 다음에는 다들 멀쩡히 살아있다.
+        시즌2 배경인 집은 철거되었는데 다시 생겨있다.
+    </string>
 </resources>
